# halo-forge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: audio_example.yaml  production_0.5b.yaml  production_1.5b.yaml  production_3b.yaml  production_7b.yaml  raft_aggressive.yaml  raft_conservative.yaml  raft_example.yaml  raft_windows.yaml  reasoning_example.yaml  sft_example.yaml  vlm_example.yaml
data/rlvr/: dataset_summary.json  humaneval_full.jsonl  humaneval_prompts.jsonl  humaneval_solutions.jsonl  humaneval_validation.jsonl  mbpp_sanitized_full.jsonl  mbpp_sanitized_prompts.jsonl  mbpp_train_full.jsonl  mbpp_train_prompts.jsonl  mbpp_train_solutions.jsonl  mbpp_validation.jsonl
datasets/: potential_prep.md  prepdatasets.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  FULL_PIPELINE.md  GGUF_EXPORT.md  HARDWARE_NOTES.md  MODELS.md  QUICKSTART.md  README.md  ROCM_TROUBLESHOOTING.md  STRIX_ALIGNMENT.md  THEORY.md  TRAINING.md  VERIFIERS.md  WEB_UI.md  WINDOWS_SETUP.md
halo_forge/: __init__.py  cli.py  ui.py
scripts/: continue_base_benchmarks.sh  continue_from_vlm.sh  export_gguf.py  extract_codeforces_sample.py  lr_schedule_calculator.py  plot_benchmarks.py  plot_training.py  validate_environment.sh
tests/: __init__.py  test_agentic.py  test_audio.py  test_config_parsing.py  test_graduated_rewards.py  test_inference.py  test_pipeline.py  test_reasoning.py  test_verifiers.py  test_vlm.py  test_vlm_data.py
toolbox/: Dockerfile  Dockerfile.ubuntu  TOOLBOX_SETUP.md  build-ubuntu.sh  build.sh  verify.sh
ui/: __init__.py  __main__.py  app.py  state.py  theme.py
website/: index.html
(+266 files in other folders)
